# sodagun

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  deny.toml  pyproject.toml  rust-toolchain.toml  sodagun.toml
.claude/: CLAUDE.md  architecture.md  commands-git-snapshot.md  commands-sandbox.md  learnings.md  testing.md
scripts/: require-virt.sh
sodagun/: __init__.py  cli.py  console.py  context.py
sodagun/commands/: git.py
src/: config.rs  context.rs  error.rs  git_meta.rs  main.rs  util.rs  workspace.rs
src/commands/: git.rs  mod.rs  sandbox.rs  snapshot.rs
src/commands/sandbox/: git_access.rs  mod.rs  network.rs  tests.rs  values.rs
src/config/: mod.rs  tests.rs
tests/: integration.rs
tests/integration/: test_add_worktree.py  test_add_worktree.rs  test_sandbox_create_image.rs  test_sandbox_launch.rs  test_sandbox_lifecycle.rs  test_sandbox_start.rs  test_snapshot.rs  utils.rs
tests/unit/: test_cli.py  test_git_commands.py
