[package]
name = "sodagun"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for git worktree management"
license = "MIT"

[[bin]]
name = "sodagun"
path = "src/main.rs"

[dependencies]
chrono       = { version = "0.4", features = ["clock"] }
clap         = { version = "4", features = ["derive"] }
git2         = { version = "0.20", features = ["vendored-libgit2"] }
microsandbox = "0.4"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "1"
tokio        = { version = "1", features = ["rt-multi-thread", "time"] }
uuid         = { version = "1", features = ["v4"] }
colored      = "3"
sha2         = "0"
base64       = "0"
hex          = "0"
sysinfo      = { version = "0", default-features = false, features = ["system"] }

[[test]]
name = "test_add_worktree"
path = "tests/integration/test_add_worktree.rs"

[[test]]
name = "test_sandbox_start"
path = "tests/integration/test_sandbox_start.rs"

[[test]]
name = "test_sandbox_lifecycle"
path = "tests/integration/test_sandbox_lifecycle.rs"

[[test]]
name = "test_snapshot"
path = "tests/integration/test_snapshot.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"

[profile.release]
lto = true          # fat LTO for maximum size/speed

[profile.release-thin]
inherits = "release"
lto = "thin"        # faster linking than fat LTO, still optimized
